--- a/resources/html/en/menu.html
+++ b/resources/html/en/menu.html
@@ -1,5 +1,15 @@
-<a class="navLink menuItemLink" href="#my_stacks">My Stacks</a>
-<a class="navLink menuItemLink" href="#contact">Contact</a>
-<a class="navLink menuItemLink" href="#programmingprojects">Programing projects</a>
-<br>
-<a class="navLink menuItemLink menuLang" href="#" onclick="changeLanguage('ptbr')">Em português</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('en', 'home', 'main_box')">
+    Home
+</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('en', 'pro', 'main_box')">
+    Pro
+</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('en', 'projects', 'main_box')">
+    Projects
+</a>
+<a class="navLink generalMenuButton" href="https://www.google.com.br" target="_blank">
+    Blog
+</a>
+<a class="navLink generalMenuButton notoEmoji" href="#" onclick="changeElementContent('en', 'settings', 'main_box')">
+    🛠
+</a>
