--- a/resources/html/ptbr/menu.html
+++ b/resources/html/ptbr/menu.html
@@ -1,5 +1,15 @@
-<a class="navLink menuItemLink" href="#my_stacks">Conjunto de tecnologias</a>
-<a class="navLink menuItemLink" href="#contact">Contato</a>
-<a class="navLink menuItemLink" href="#programmingprojects">Projetos de programação</a>
-<br>
-<a class="navLink menuItemLink menuLang" href="#" onclick="changeLanguage('en')">In English</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('ptbr', 'home', 'main_box')">
+    Início
+</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('ptbr', 'pro', 'main_box')">
+    Pro
+</a>
+<a class="navLink generalMenuButton" href="#" onclick="changeElementContent('ptbr', 'projects', 'main_box')">
+    Projetos
+</a>
+<a class="navLink generalMenuButton" href="https://www.google.com.br" target="_blank">
+    Blog
+</a>
+<a class="navLink generalMenuButton notoEmoji" href="#" onclick="changeElementContent('ptbr', 'settings', 'main_box')">
+    🛠
+</a>
