--- a/resources/html/en/pro.html
+++ b/resources/html/en/pro.html
@@ -1,4 +1,14 @@
-<h1 id="my_stacks_">My Stacks</h1>
+<h1 id="my_stacks_">Professional Profile</h1>
+
+<p>
+    As a programmer, my focus is on the back-end, and the languages I most know are C, Java and JavaScript <i>(Node.js)</i>. I also 
+    have knowledge of development in the front-end, like CSS, DOM manipulation through JavaScript, and the Angular framework, but my 
+    best suit is in the back-end.
+</p>
+
+<p>Just below, you can see the technologies and concepts I know.</p>
+
+<br>
 
 <div class="cardContainer">
 
