--- a/resources/html/en/projects.html
+++ b/resources/html/en/projects.html
@@ -29,4 +29,4 @@
 </div>
 
 <p>If you want to see more projects, see my <a href="https://github.com/hmslima/"
-        target="_blank">GitHub</a>.</p>
+        target="_blank">GitHub profile</a>.</p>
