--- a/resources/html/ptbr/home.html
+++ b/resources/html/ptbr/home.html
@@ -1,6 +1,69 @@
 <div class="imgTextIntroduction">
     <img src="resources/img/photos/hmslima.jpg" class="mainPhoto">
     <div id="presentation-paragraph">
-        Seja bem-vindo ou bem-vinda ao site de Henrique Matheus da Silva Lima, um escritor, desenhista e programador brasileiro
+        Seja bem-vindo ou bem-vinda ao site de Henrique Matheus da Silva Lima, um escritor, desenhista e programador brasileiro 
     </div>
 </div>
+
+<br><br>
+<h1>Sobre mim</h1>
+
+<p>
+    Atualmente trabalho no Instituto Brasileiro de Geografia e Estatística como um supervisor de coleta e qualidade. Este é um 
+    trabalho temporário que paga bem, mas meu objetivo principal é em me tornar num programador. Você pode checar meu perfil 
+    profissional clicando no botão <b>Pro</b> no menu acima.
+</p>
+
+<p>
+    Por enquanto, este site está sob construção e eu não tive tempo para trabalhar nos meus projetos artísticos, então você não verá 
+    qualquer estória ou desenho aqui, mas eu já tenho alguns projetos de programação.
+</p>
+
+<p>
+    Você não vai ver muitas atualizações aqui. Clique nos botões <b>Projetos</b> e <b>Blog</b> acima para ver o que tenho de novidade, 
+    especialmente no botão de blog que abrirá uma nova aba ou janela com meu blog em WordPress. <span style="color: red;">Ainda não 
+    tenho um blog, portanto o botão do Blog vai te levar para a página do Google.</span>
+</p>
+
+<br>
+
+<p style="font-weight: bold;">Meus interesses:</p>
+<ul>
+    <li>Escrita e desenho</li>
+    <li>Programação</li>
+    <li>idiomas</li>
+    <li>Fantasia e ficção científica</li>
+    <li>História antiga <i>(qualquer coisa anterior a Idade Média)</i></li>
+    <li>Muitos gêneros de filmes, séries, livros e quadrinhos
+        <ul><li>É claro que animês e mangás estão incluídos, sou um grande fã 🙂</li></ul>
+    </li>
+    <li>Materiais de não-ficção como documentários e livros técnicos</li>
+    <li>Jogos, especialmente os gêneros de RPG, aventura e FPS</li>
+</ul>
+
+<br>
+
+<p style="font-style: italic;">
+    Você pode mudar o idioma do site e alternar entre o modo claro e escuro. Para isso, vá em <b>Configurações</b> clicando no botão 
+    <b class="notoEmoji">🛠</b> no menu acima.
+</p>
+
+<br><br>
+<h1 id="contact_">Contato</h1>
+
+<p><img src="resources/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com"
+        target="_blank">E-mail</a></p>
+
+<p><img src="resources/img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/"
+        target="_blank">GitHub</a></p>
+
+<p><img src="resources/img/icons/linkedin.svg" class="imgText"> <a
+        href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
+
+<p><img src="resources/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_"
+        target="_blank">Twitter</a></p>
+
+<br>
+
+<p><img src="resources/img/icons/curriculum.svg" class="imgText"> <a href="download/curriculo.pdf"
+        target="_blank" id="resume_">Currículo</i></a></p>
