--- a/resources/html/ptbr/pro.html
+++ b/resources/html/ptbr/pro.html
@@ -1,4 +1,14 @@
-<h1 id="my_stacks_">My Stacks</h1>
+<h1 id="my_stacks_">Perfil profissional</h1>
+
+<p>
+    Como programador, meu foco é no <i lang="en">back-end</i> e as linguagens que mais sei são C, Java e JavaScript <i>(Node.js)</i>. 
+    Também tenho conhecimentos de desenvolvimento <i lang="en">front-end</i>, como CSS, manipulação do DOM pelo javaScript e o framework 
+    Angular, mas meu forte é no <i lang="en">back-end</i>.
+</p>
+
+<p>Logo a seguir você pode ver as tecnologias e conceitos que sei.</p>
+
+<br>
 
 <div class="cardContainer">
 
