--- a/resources/html/en/home.html
+++ b/resources/html/en/home.html
@@ -4,3 +4,66 @@
         Welcome to the website of Henrique Matheus da Silva Lima, a writer, drawer and Brazilian programmer.
     </div>
 </div>
+
+<br><br>
+<h1>About me</h1>
+
+<p>
+    I'm currently working at the Brazilian Institute of Geography and Statistics as a collection and quality supervisor. This is a 
+    temporary job that pays well, but my main goal is to become a programmer. You can check my professional profile by clicking 
+    in the <b>Pro</b> button in the menu above.
+</p>
+
+<p>
+    For now, this website is under construction, and I hadn't the time to work in my artistic projects, so you will not see any 
+    story or drawing here, but I already have some programming projects.
+</p>
+
+<p>
+    You aren't going to see many updates here. Click in the <b>Projects</b> and <b>Blog</b> buttons above to see what I am doing of new, 
+    specially in the Blog button that will open a new tab or window with my WordPress blog. <span style="color: red;">I still have no  
+    blog, therefore the Blog button will take you to the Google page.</span>
+</p>
+
+<br>
+
+<p style="font-weight: bold;">My interests:</p>
+<ul>
+    <li>Writing and drawing</li>
+    <li>Programming</li>
+    <li>Languages <i>(I mean languages like English and Esperanto)</i></li>
+    <li>Fantasy and science fiction</li>
+    <li>Ancient history <i>(anything before the Middle Ages)</i></li>
+    <li>Many genres of movies, TV series, books, and comic books
+        <ul><li>Of course that animes and mangas are included, I am a huge fan 🙂</li></ul>
+    </li>
+    <li>Non-fiction materials like documentaries and technical books</li>
+    <li>Games, specially the genres RPG, adventure and FPS</li>
+</ul>
+
+<br>
+
+<p style="font-style: italic;">
+    You can change the language of the website, and alternate between light mode and dark mode. For that, go to <b>Settings</b> by 
+    clicking in the <b class="notoEmoji">🛠</b> button above.
+</p>
+
+<br><br>
+<h1 id="contact_">Contact</h1>
+
+<p><img src="resources/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com"
+        target="_blank">E-mail</a></p>
+
+<p><img src="resources/img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/"
+        target="_blank">GitHub</a></p>
+
+<p><img src="resources/img/icons/linkedin.svg" class="imgText"> <a
+        href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
+
+<p><img src="resources/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_"
+        target="_blank">Twitter</a></p>
+
+<br>
+
+<p><img src="resources/img/icons/curriculum.svg" class="imgText"> <a href="download/curriculo.pdf"
+        target="_blank" id="resume_">Resume <i>(in Portuguese)</i></a></p>
