--- a/resources/html/ptbr/projects.html
+++ b/resources/html/ptbr/projects.html
@@ -1,4 +1,4 @@
-<h1 id="programmingprojects_">My Main Programming Projects</h1>
+<h1 id="programmingprojects_">Meus principais projetos de programação</h1>
 
 <div class="cardContainer">
     <div class="card">
@@ -6,11 +6,11 @@
             <h3>Mural de recados</h3>
         </div>
         <div class="cardBody">
-            <p>A simple Message Board made with Java and Spring Boot in the back-end, and Angular in the front-end</p>
+            <p>Um Mural de Recados simples feito com Java e Spring Boot no <i>back-end</i> e Angular no <i>front-end</i></p>
             <br>
-            <a class="linkWithWhiteBg" href="https://mural-deploy.vercel.app/" target="_blank">See project</a>
+            <a class="linkWithWhiteBg" href="https://mural-deploy.vercel.app/" target="_blank">Ver projeto</a>
             <br><br>
-            <a class="linkWithWhiteBg" href="https://github.com/hmslima/mural_de_recados" target="_blank">GitHub page</a>
+            <a class="linkWithWhiteBg" href="https://github.com/hmslima/mural_de_recados" target="_blank">Página do GitHub</a>
         </div>
     </div>
 
@@ -19,14 +19,15 @@
             <h3>JS-Dictionar</h3>
         </div>
         <div class="cardBody">
-            <p>A powerful dynamic dictionary contained in a single HTML file, you can use easily adapt it to your own dictionary. You can search in both languages, and the specific words are marked.</p>
+            <p>Um dicionário dinâmico poderoso contido num único arquivo HTML, você pode adaptá-lo facilmente no seu próprio dicionário. 
+                Você pode pesquisar em ambas as linguagens e palavras específicas são marcadas.</p>
             <br>
-            <a class="linkWithWhiteBg" href="https://hmslima.github.io/JS-Dictionar/" target="_blank">Example</a>
+            <a class="linkWithWhiteBg" href="https://hmslima.github.io/JS-Dictionar/" target="_blank">Exemplo</a>
             <br><br>
-            <a class="linkWithWhiteBg" href="https://github.com/hmslima/JS-Dictionar" target="_blank">GitHub page</a>
+            <a class="linkWithWhiteBg" href="https://github.com/hmslima/JS-Dictionar" target="_blank">Página do GitHub</a>
         </div>
     </div>
 </div>
 
-<p>If you want to see more projects, see my <a href="https://github.com/hmslima/"
-        target="_blank">GitHub</a>.</p>
+<p>Se você quiser ver mais protejos, veja meu <a href="https://github.com/hmslima/"
+        target="_blank">perfil do GitHub</a>.</p>
