--- a/resources/html/en/settings.html
+++ b/resources/html/en/settings.html
@@ -31,29 +31,29 @@
 <ul>
     <li>Languages
         <ul>
-            <li><a href="/?lang=en">?lang=en</a> <i>(English. Actually this one is redundant because it is the default)</i></li> 
-            <li><a href="/?lang=ptbr">?lang=ptbr</a> <i>(Brazilian Portuguese)</i></li>
+            <li><a href="?lang=en">?lang=en</a> <i>(English. Actually this one is redundant because it is the default)</i></li> 
+            <li><a href="?lang=ptbr">?lang=ptbr</a> <i>(Brazilian Portuguese)</i></li>
         </ul>
     </li>
     <li>Pages
         <ul>
-            <li><a href="/?page=home">?page=home</a> <i>(Home page. The default option)</i></li>
-            <li><a href="/?page=pro">?page=pro</a> <i>(Professional Profile)</i></li>
-            <li><a href="/?page=projects">?page=projects</a> <i>(Projects)</i></li>
-            <li><a href="/?page=settings">?page=settings</a> <i>(Settings)</i></li>
+            <li><a href="?page=home">?page=home</a> <i>(Home page. The default option)</i></li>
+            <li><a href="?page=pro">?page=pro</a> <i>(Professional Profile)</i></li>
+            <li><a href="?page=projects">?page=projects</a> <i>(Projects)</i></li>
+            <li><a href="?page=settings">?page=settings</a> <i>(Settings)</i></li>
         </ul>
     </li>
     <li>Lighting mode
         <ul>
-            <li><a href="/?mode=light">?mode=light</a> <i>(Light mode. Actually this one is redundant because it is the default)</i></li>
-            <li><a href="/?mode=dark">?mode=dark</a> <i>(Dark mode)</i></li>
+            <li><a href="?mode=light">?mode=light</a> <i>(Light mode. Actually this one is redundant because it is the default)</i></li>
+            <li><a href="?mode=dark">?mode=dark</a> <i>(Dark mode)</i></li>
         </ul>
     </li>
     <li>You can mix these parameters by using the character <i>&</i>:
         <ul>
-            <li><a href="/?page=pro&lang=ptbr">?page=pro&lang=ptbr</a> <i>(Professional Profile's page in Brazilian Portuguese)</i></li>
-            <li><a href="/?lang=en&page=projects">?lang=en&page=projects</a> <i>(Projects' page in English, although specifying "lang" as "en" is redundant)</i></li>
-            <li><a href="/?page=pro&lang=ptbr&mode=dark">?page=pro&lang=ptbr&mode=dark</a> <i>(Professional Profile's page in Brazilian Portuguese, and in dark mode)</i></li>
+            <li><a href="?page=pro&lang=ptbr">?page=pro&lang=ptbr</a> <i>(Professional Profile's page in Brazilian Portuguese)</i></li>
+            <li><a href="?lang=en&page=projects">?lang=en&page=projects</a> <i>(Projects' page in English, although specifying "lang" as "en" is redundant)</i></li>
+            <li><a href="?page=pro&lang=ptbr&mode=dark">?page=pro&lang=ptbr&mode=dark</a> <i>(Professional Profile's page in Brazilian Portuguese, and in dark mode)</i></li>
         </ul>
     </li>
 </ul>
