--- a/resources/html/en/home.html
+++ b/resources/html/en/home.html
@@ -29,15 +29,21 @@
 
 <p style="font-weight: bold;">My interests:</p>
 <ul>
-    <li>Writing and drawing</li>
     <li>Programming</li>
-    <li>Languages <i>(I mean languages like English and Esperanto)</i></li>
+    <li>Writing and drawing</li>
+    <li>Languages <i>(I mean languages like English and French)</i></li>
     <li>Fantasy and science fiction</li>
-    <li>Ancient history <i>(anything before the Middle Ages)</i></li>
     <li>Many genres of movies, TV series, books, and comic books
         <ul><li>Of course that animes and mangas are included, I am a huge fan 🙂</li></ul>
     </li>
-    <li>Non-fiction materials like documentaries and technical books</li>
+    <li>Non-fiction materials like documentaries and technical books
+        <ul>
+            <li>Anything related to software development, writing techniques, and drawing techniques</li>
+            <li>Ancient history</li>
+            <li>Anthropology / Sociology</li>
+            <li>Different cultures</li>
+        </ul>
+    </li>
     <li>Games, specially the genres RPG, adventure and FPS</li>
 </ul>
 
