--- a/resources/html/ptbr/home.html
+++ b/resources/html/ptbr/home.html
@@ -29,15 +29,21 @@
 
 <p style="font-weight: bold;">Meus interesses:</p>
 <ul>
-    <li>Escrita e desenho</li>
     <li>Programação</li>
-    <li>idiomas</li>
+    <li>Escrita e desenho</li>
+    <li>Idiomas</li>
     <li>Fantasia e ficção científica</li>
-    <li>História antiga <i>(qualquer coisa anterior a Idade Média)</i></li>
     <li>Muitos gêneros de filmes, séries, livros e quadrinhos
         <ul><li>É claro que animês e mangás estão incluídos, sou um grande fã 🙂</li></ul>
     </li>
-    <li>Materiais de não-ficção como documentários e livros técnicos</li>
+    <li>Materiais de não-ficção como documentários e livros técnicos
+        <ul>
+            <li>Qualquer coisa relacionada a desenvolvimento de software, técnicas de escrita e técnicas de desenho</li>
+            <li>História antiga</li>
+            <li>Antropologia / Sociologia</li>
+            <li>Diferentes culturas</li>
+        </ul>
+    </li>
     <li>Jogos, especialmente os gêneros de RPG, aventura e FPS</li>
 </ul>
 
