--- a/resources/html/ptbr/pro.html
+++ b/resources/html/ptbr/pro.html
@@ -1,7 +1,7 @@
 <h1 id="my_stacks_">Perfil profissional</h1>
 
 <p>
-    Como programador, meu foco é no <i lang="en">back-end</i> e as linguagens que mais sei são C, Java e JavaScript <i>(Node.js)</i>. 
+    Como programador, meu foco é no <i lang="en">back-end</i> e as linguagens que mais sei são Go, C, Java e JavaScript <i>(Node.js)</i>. 
     Também tenho conhecimentos de desenvolvimento <i lang="en">front-end</i>, como CSS, manipulação do DOM pelo javaScript e o framework 
     Angular, mas meu forte é no <i lang="en">back-end</i>.
 </p>
@@ -13,7 +13,7 @@
 <div class="cardContainer">
 
     <div class="cardStacks">
-        <div class="cardTitleStacks" id="java_development_">Desenvolvimento Java</div>
+        <div class="cardTitleStacks" id="java_development_">Desenvolvimento em Java</div>
         <div class="cardBodyStacks">
             <div class="stack">
                 JAVA
@@ -45,6 +45,10 @@
     <div class="cardStacks">
         <div class="cardTitleStacks" id="other_languages_">Outras Linguagens</div>
         <div class="cardBodyStacks">
+            <div class="stack">
+                Rust
+                <img class="svgStack" src="resources/img/stacks/rust.svg" alt="Rust">
+            </div>
             <div class="stack">
                 C
                 <img class="svgStack" src="resources/img/stacks/c.svg" alt="C">
