--- a/resources/html/en/pro.html
+++ b/resources/html/en/pro.html
@@ -1,7 +1,7 @@
 <h1 id="my_stacks_">Professional Profile</h1>
 
 <p>
-    As a programmer, my focus is on the back-end, and the languages I most know are C, Java and JavaScript <i>(Node.js)</i>. I also 
+    As a programmer, my focus is on the back-end, and the languages I most know are Go, C, Java and JavaScript <i>(Node.js)</i>. I also 
     have knowledge of development in the front-end, like CSS, DOM manipulation through JavaScript, and the Angular framework, but my 
     best suit is in the back-end.
 </p>
@@ -45,6 +45,10 @@
     <div class="cardStacks">
         <div class="cardTitleStacks" id="other_languages_">Other Languages</div>
         <div class="cardBodyStacks">
+            <div class="stack">
+                Rust
+                <img class="svgStack" src="resources/img/stacks/rust.svg" alt="Rust">
+            </div>
             <div class="stack">
                 C
                 <img class="svgStack" src="resources/img/stacks/c.svg" alt="C">
